# known-types

./: CHANGES.md  Cargo.toml  README.md  Rakefile
.github/workflows/: ci.yaml
lib/known-types/: Cargo.toml
lib/known-types-anthropic/: Cargo.toml
lib/known-types-anthropic/src/: lib.rs
lib/known-types-google/: Cargo.toml
lib/known-types-google/src/: lib.rs
lib/known-types-graphql/: Cargo.toml
lib/known-types-graphql/src/: lib.rs
lib/known-types-ietf/: Cargo.toml
lib/known-types-ietf/src/: lib.rs
lib/known-types-nostr/: Cargo.toml
lib/known-types-nostr/src/: lib.rs
lib/known-types-openai/: .gitignore  Cargo.toml  Rakefile  rust.rb
lib/known-types-openai/.rake/: flatten_openapi.rb  hoist_nullables.rb  omit_fields.csv  openapi.rb  openapi_flattener.rb  openapi_helpers.rb  openapi_hoister.rb  openapi_optimizer.rb
lib/known-types-openai/.rake/openapi/: transforms.rb
lib/known-types-openai/.rake/openapi/transforms/: combine_all_ofs.rb  deref_aliases.rb  hoist_nullables.rb  remove_redundant_combines.rb
lib/known-types-openai/src/: components.rs  groups.rs  lib.rs  prelude.rs  schemas.rs
lib/known-types-openai/src/components/: run_step_stream_event.rs  thread_stream_event.rs
lib/known-types-openai/src/groups/: admin_api_keys.rs  administration.rs  assistants.rs  assistants_streaming.rs  audio.rs  audit_logs.rs  batch.rs  certificates.rs  chat.rs  chat_streaming.rs  completions.rs  embeddings.rs  evals.rs  files.rs  fine_tuning.rs  images.rs  invite.rs  messages.rs  models.rs  moderations.rs  project_api_keys.rs  project_rate_limits.rs  project_service_accounts.rs  project_users.rs  projects.rs  realtime.rs  realtime_client_events.rs  realtime_server_events.rs  realtime_sessions.rs  responses.rs  responses_streaming.rs  run_steps.rs  runs.rs  threads.rs  uploads.rs  usage.rs  users.rs  vector_stores.rs  vector_stores_file_batches.rs  vector_stores_files.rs
lib/known-types-openai/src/schemas/: chat_completion_request_message.rs  footer.rs  message_stream_event.rs  run_stream_event.rs
lib/known-types-openai/tests/: test_deser.rs
lib/known-types-pypi/: Cargo.toml
lib/known-types-pypi/src/: lib.rs  package.rs
lib/known-types-rubygems/: Cargo.toml
lib/known-types-rubygems/src/: gem.rs  lib.rs  prelude.rs
lib/known-types-w3c/: Cargo.toml
lib/known-types-w3c/src/: lib.rs
lib/known-types-x/: Cargo.toml
lib/known-types-x/src/: lib.rs
lib/known-types/src/: c.rs  lib.rs
