# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Well-known types."
#documentation = "https://docs.rs/known-types/"
readme = true
homepage = "https://github.com/known-facts/known-types"
repository = "https://github.com/known-facts/known-types"
license = "Unlicense"
keywords = ["known", "known-types", "struct", "types"]
categories = [
    "api-bindings",
    "config",
    "data-structures",
    "rust-patterns",
    "no-std",
]
publish = true

[workspace.dependencies]
known-types = { path = "lib/known-types" }
bincode = { version = "2", default-features = false, features = ["derive"] }
borsh = { version = "1.5", default-features = false, features = ["derive"] }
musli = { version = "0.0.131", default-features = false }
rasn = { version = "0.26", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[patch.crates-io]
known-types = { path = "lib/known-types" }
