[package]
name = "known-types-anthropic"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Well-known types for Anthropic APIs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["known-types", "anthropic", "api", "serde"]
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["bincode?/alloc", "serde?/alloc"]
std = ["alloc", "bincode?/std", "borsh?/std", "rasn?/std", "serde?/std"]
unstable = []

[dependencies]
bincode = { version = "2", default-features = false, features = [
    "derive",
], optional = true }
borsh = { version = "1.5", default-features = false, features = [
    "derive",
], optional = true }
rasn = { version = "0.26", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
