[package]
name = "known-types-google"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Well-known types for Google APIs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["known-types", "google", "api", "serde"]
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["bincode?/alloc", "musli?/alloc", "serde?/alloc"]
std = [
    "alloc",
    "bincode?/std",
    "borsh?/std",
    "musli?/std",
    "rasn?/std",
    "serde?/std",
]
unstable = []

[dependencies]
bincode = { version = "2", default-features = false, features = [
    "derive",
], optional = true }
borsh = { version = "1.5", default-features = false, features = [
    "derive",
], optional = true }
musli = { version = "0.0.131", default-features = false, optional = true }
rasn = { version = "0.26", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
