[package]
name = "known-types-ietf"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Well-known types for IETF specifications."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["known-types", "ietf", "standards", "serde"]
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
std = []
unstable = []

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
