[package]
name = "known-types-openai"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Well-known types for OpenAI APIs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["known-types", "openai", "api", "serde"]
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["bincode?/alloc", "musli?/alloc", "serde?/alloc"]
std = [
    "alloc",
    "bincode?/std",
    "borsh?/std",
    "musli?/std",
    "rasn?/std",
    "serde?/std",
]
unstable = []

[dependencies]
bincode = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
musli = { workspace = true, optional = true }
rasn = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
known-types-openai = { path = ".", features = ["serde"] }
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true, features = ["default"] }
