[package]
name = "known-types-pypi"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Well-known types for Python Package Index (PyPI) APIs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["known-types", "pypi", "api", "serde"]
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["serde?/alloc"]
std = ["alloc", "serde?/std"]
unstable = []

# Integrations:
serde = ["dep:serde", "alloc"]

[dependencies]
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
