[package]
name = "known-types-x"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description = "Well-known types for X (formerly Twitter) APIs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["known-types", "x", "twitter", "api", "serde"]
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
std = []
unstable = []

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
