[package]
name = "known-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["serde?/alloc"]
std = ["alloc", "serde?/std"]
unstable = []
nightly = []

# Integrations:
serde = ["dep:serde", "alloc"]

[dependencies]
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
