[package]
name = "known-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["bincode?/alloc", "serde?/alloc"]
std = ["alloc", "bincode?/std", "borsh?/std", "rasn?/std", "serde?/std"]
unstable = []
nightly = []

[dependencies]
bincode = { version = "2", default-features = false, features = [
    "derive",
], optional = true }
borsh = { version = "1.5", default-features = false, features = [
    "derive",
], optional = true }
rasn = { version = "0.26", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
